    thanks Simon Ruderich for the patch! (closes: #663590)
    Additionally, enable all available hardening features.
  * Checked for policy 3.9.3, add DEP3 patch headers.
  * Add Danish debconf translation, thanks Joe Dalton (closes: #659467).
  * Add 'su root list' statements to logrotate config, to cope
    with logrotate >= 3.8; thanks Joël Bertrand (closes: #653766).

 -- Thijs Kinkhorst <thijs@debian.org>  Sun, 18 Mar 2012 13:11:52 +0100

mailman (1:2.1.14-3) unstable; urgency=low

  * Make man page descruptions match more keywords (closes: #597112).
  * Add cull_bad_shunt command to default cron job (closes: #615204)
    and improve cron job handling in the package.
  * Import dpkg buildflags, also enabling hardening features.
  * Remove gate_news debconf question.

 -- Thijs Kinkhorst <thijs@debian.org>  Sat, 08 Oct 2011 17:27:51 +0200

mailman (1:2.1.14-2) unstable; urgency=low

  [ Thijs Kinkhorst ]
  * Move mail-transport-agent to Recommends, since Mailman can be
    configured to run with a remote MTA (closes: #616292).
  * Update to policy 3.9.2, add build-{arch,indep} targets.

  [ Thorsten Glaser ]
  * Add myself to Uploaders, as suggested by Thijs.
  * Apply patch from Barry Warsaw to switch from python-support
    to dh_python2. (LP: #788514) (Closes: #637398)

 -- Thijs Kinkhorst <thijs@debian.org>  Wed, 17 Aug 2011 12:00:50 +0000

mailman (1:2.1.14-1) unstable; urgency=medium

  * New upstream release. Patches incorporated:
    - 15_mailmanctl_daemonize.patch
    - 83-CVE-2010-3089--bug599833.patch
  * Add upstream patch for CVE-2011-0707: XSS in confirmations.

 -- Thijs Kinkhorst <thijs@debian.org>  Sat, 19 Feb 2011 08:26:43 +0100

mailman (1:2.1.13-4.1) unstable; urgency=high

  * Non-maintainer upload.
  * debian/patches
    - (83): New. CVE-2010-3089 security fix from mailman 2.14. Patch
      thanks to <d+deb@vdr.jp> (grave, security; Closes: #599833).

 -- Jari Aalto <jari.aalto@cante.net>  Sat, 16 Oct 2010 08:46:55 +0300
